--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "bin": {
-    "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js",
-    "brain-calc": "./bin/brain-calc.js"
+    "brain-calc": "./bin/brain-calc.js",
+    "brain-games": "./bin/brain-games.js",
+    "brain-gcd": "./bin/brain-gcd.js"
   },
   "dependencies": {
     "readline-sync": "^1.4.10"
