--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "author": "",
   "license": "ISC",
   "bin": {
-    "brain-even": "./bin/brain-even.js",
-    "brain-calc": "./bin/brain-calc.js",
-    "brain-games": "./bin/brain-games.js",
-    "brain-gcd": "./bin/brain-gcd.js",
-    "brain-progression": "bin/brain-progression.js",
-    "brain-prime": "./bin/brain-prime.js"
+    "brain-even": "/bin/brain-even.js",
+    "brain-calc": "/bin/brain-calc.js",
+    "brain-games": "/bin/brain-games.js",
+    "brain-gcd": "/bin/brain-gcd.js",
+    "brain-progression": "/bin/brain-progression.js",
+    "brain-prime": "/bin/brain-prime.js"
   },
   "dependencies": {
     "readline-sync": "^1.4.10"
