--- a/package.json
+++ b/package.json
@@ -5,24 +5,28 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint ."
   },
   "author": "",
   "license": "ISC",
   "bin": {
-    "brain-even": "/bin/brain-even.js",
-    "brain-calc": "/bin/brain-calc.js",
-    "brain-games": "/bin/brain-games.js",
-    "brain-gcd": "/bin/brain-gcd.js",
-    "brain-progression": "/bin/brain-progression.js",
-    "brain-prime": "/bin/brain-prime.js"
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "./bin/brain-calc.js",
+    "brain-games": "bin/brain-games.js",
+    "brain-gcd": "bin/brain-gcd.js",
+    "brain-progression": "bin/brain-progression.js",
+    "brain-prime": "bin/brain-prime.js"
   },
   "dependencies": {
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "eslint": "^9.21.0",
+    "eslint": "^9.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.31.0",
     "globals": "^16.0.0"
-  }
+  },
+  "keywords": []
 }
