--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "bin": {
     "brain-even": "bin/brain-even.js",
-    "brain-calc": "./bin/brain-calc.js",
+    "brain-calc": "bin/brain-calc.js",
     "brain-games": "bin/brain-games.js",
     "brain-gcd": "bin/brain-gcd.js",
     "brain-progression": "bin/brain-progression.js",
@@ -22,11 +22,13 @@
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
+    "@eslint/js": "^9.26.0",
     "eslint": "^9.26.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.31.0",
-    "globals": "^16.0.0"
+    "eslint-plugin-vue": "^10.1.0",
+    "globals": "^16.1.0",
+    "typescript-eslint": "^8.32.1"
   },
   "keywords": []
 }
